--- a/PitchVisualizer/index.html
+++ b/PitchVisualizer/index.html
@@ -49,6 +49,6 @@
     <button id="toggleBtn">Pause</button>
   </div>
   <canvas id="three-canvas"></canvas>
-  <script type="module" src="src/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
